# Watermelon

./: .gitattributes  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
scripts/: clear-port.ps1
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/native/src/: config.cc  dllmain.cc  hook.h  libcef.cc  pengu.h  platform.h
src-tauri/native/src/browser/: assets.cc  browser.cc  browser.h  talon.cc  watermelon.cc
src-tauri/native/src/renderer/: renderer.cc  v8_helper.cc  v8_wrapper.h
src-tauri/native/src/utils/: cefstr.cc  dylib.cc  file.cc  log.cc
src-tauri/resources/plugins/: preload.js
src-tauri/src/: data_dragon.rs  lib.rs  main.rs  patcher.rs
src-tauri/src/bridge/: mod.rs
src-tauri/src/lcu/: discovery.rs  events.rs  http.rs  mod.rs  poller.rs  process.rs  refresh.rs
src-tauri/src/overlay/: game_paths.rs  hash.rs  mod.rs  pipeline.rs  runtime.rs
src-tauri/src/overlay/wad/: archive.rs  entry.rs  index.rs  mod.rs  mounted.rs  toc.rs
src-tauri/src/pengu/: ifeo.rs  mod.rs  process.rs
src-tauri/src/skins/: fantome.rs  index.rs  injection.rs  library.rs  mod.rs  preview.rs  state.rs
src-tauri/src/wad/: bin.rs  mod.rs  reader.rs
