[package]
name = "watermelon"
version = "1.0.0"
description = "Windows desktop app for managing custom League of Legends skins."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "watermelon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.4"
base64 = "0.22.1"
anyhow = "1.0.102"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
tokio = { version = "1.51.1", features = ["time", "net", "rt"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"
tauri-plugin-dialog = "2.7.0"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
zstd = "0.13.3"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
ltk_texture = "0.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh64", "xxh3"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }
ctrlc = "3"
